# master-thesis

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  README.md  README_SLURM.md  batch_processing.py  compute_random_projection.py  docker-bake.hcl  dot_products_model_generated.sbatch  dot_products_paraphrased.sbatch  google_colab_requirements.txt  gradient_similarities_model_generated.sbatch  gradient_similarities_model_generated_random_projection.sbatch  gradient_similarities_paraphrased.sbatch  gradient_similarities_paraphrased_random_projection.sbatch  layer_analysis.ipynb  main.py  multistage.Dockerfile  paraphrase.py  paraphrased_dataset.ipynb  playground.ipynb  playground_bm25.ipynb  playground_model_generation.ipynb  pyproject.toml  requirements.txt  similarity_analysis.ipynb  similarity_analysis_bm25_selected.ipynb  slurm_docker.sbatch  slurm_dot_products_model_generated.sbatch  slurm_dot_products_paraphrased.sbatch  slurm_gradient_similarities_model_generated.sbatch  slurm_gradient_similarities_model_generated_random_projection.sbatch  slurm_gradient_similarities_paraphrased.sbatch  slurm_gradient_similarities_paraphrased_random_projection.sbatch  test.py  tests.py
.github/workflows/: docker-image.yml
application/: computation.py  config.py  dataset.py  dot_products_bm25_selected.py  dot_products_bm25_selected_model_generated.py  dot_products_model_generated.py  dot_products_paraphrased.py  gradient_similarities.ipynb  gradient_similarities.py  gradient_similarities_bm25_selected.ipynb  gradient_similarities_bm25_selected.py  gradient_similarities_bm25_selected_model_generated.py  gradient_similarities_model_generated.py  gradient_similarities_paraphrased.py  gradient_similarities_paraphrased_random_projection.py  layer_analysis.ipynb  model.py  paraphrased_dataset.ipynb  paraphrasing.py  playground.ipynb  playground_bm25.ipynb  playground_chat_completion.ipynb  playground_model_generation.ipynb  preprocessing.py  similarity_analysis.ipynb  similarity_analysis_bm25_selected.ipynb  storage.py  tests.py  trak_tester.py
application/analysis/: similarity_analysis.ipynb  similarity_analysis_bm25_selected.ipynb
application/computations/: gradient_similarities.ipynb  gradient_similarities.py  (+2 more)
code/: config.py  dataset.ipynb  gradient_operations.ipynb  paraphrased_dataset.ipynb  playground.ipynb  similarity_analysis.ipynb  tests.py  utilities.py
notebooks/: analysis.ipynb  datasets_playground.ipynb  paraphrased_dataset.ipynb  playground.ipynb  playground_bm25.ipynb  playground_datasets.ipynb  playground_model_generation.ipynb  playground_preliminary_analysis_gradient_dot_products.ipynb  playground_preprocessing.ipynb
scripts/: line_plot_accuracy_per_layer.py
slurm_scripts/: combine_all_results.sh  run_all.sh
src/: combine_results.py  computation.py  dataset.py  model.py  model_operations.py  paraphrasing.py  preprocessing.py  storage.py  utility.py
(+335 files in other folders)
