[project]
name = "gradient-similarity-analyzer"
version = "0.1.0"
authors = [{ name = "Lukas Hinterleitner" }]
description = "Calculates similarities between gradients of the LIMA fine-tuning dataset samples and paraphrased versions of it."
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "ipywidgets==8.1.5",
    "open-instruct",
    "openai==1.59.7",
    "pandas==2.2.3",
    "python-dotenv==1.1.0",
    "rank-bm25==0.2.2",
    "scikit-learn==1.6.1",
    "seaborn==0.13.2",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm==4.67.1",
]

[tool.uv.sources]
open-instruct = [
    { path = "submodules/open-instruct", editable = true }
]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[project.optional-dependencies]
build = ["torch"]
compile = ["traker"]

[tool.uv]
no-build-isolation-package = ["traker"]

[[tool.uv.dependency-metadata]]
name = "traker"
version = "0.3.2"
requires-dist = ["torch"]

