[project]
name = "gradient-similarity-analyzer"
version = "0.1.0"
authors = [{ name = "Lukas Hinterleitner" }]
description = "Calculates similarities between gradients of the LIMA fine-tuning dataset samples and paraphrased versions of it."
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "ipywidgets==8.1.5",
    "open-instruct",
    "openai==1.59.9",
    "pandas==2.3.0",
    "pandas-stubs==2.3.0.250703",
    "python-dotenv==1.1.1",
    "rank-bm25==0.2.2",
    "scikit-learn==1.6.1",
    "seaborn==0.13.2",
    "tqdm==4.67.1",
    "torch==2.6.0",
    "notebook==7.4.4"
]

[tool.uv.sources]
open-instruct = [
    { path = "submodules/open-instruct", editable = true }
]
