[project]
name = "gradient-similarity-analyzer"
version = "0.1.0"
authors = [{ name = "Lukas Hinterleitner" }]
description = "Calculates similarities between gradients of the LIMA fine-tuning dataset samples and paraphrased versions of it."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "notebook>=7.4.5",
    "open-instruct",
    "openai==1.99.9",
    "pandas==2.3.1",
    "python-dotenv==1.1.1",
    "rank-bm25==0.2.2",
    "seaborn==0.13.2",
    "tqdm==4.67.1",
]

[project.optional-dependencies]
# ensures torch (and basic build tools) are present BEFORE building fast-jl
build = ["torch"]
trakfast = ["traker[fast]==0.3.2"]

[tool.uv]
# let these packages build inside the project env so they can import torch
no-build-isolation-package = ["fast-jl"]

[tool.uv.sources]
open-instruct = [{ path = "submodules/open-instruct", editable = true }]
